<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        tools:context=".DecypherZigZag">

        <Button
            android:id="@+id/btnBuscar"
            style="@android:style/Widget.Button"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/buscar"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btnCancelar"
            style="@android:style/Widget.Button"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@color/colorPrimary"
            android:text="@string/cancelar"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/labelGrafico2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="89dp"
            android:text="@string/nombre_del_archivo" />

        <TextView
            android:id="@+id/labelArchivo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/labelGrafico2"
            android:layout_alignParentTop="true"
            android:layout_marginStart="140dp"
            android:layout_marginTop="89dp" />

        <Button
            android:id="@+id/btnDecifrar"
            style="@android:style/Widget.Button"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labelContenido"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="104dp"
            android:background="@color/colorPrimary"
            android:text="@string/decifrar"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/labelContenido"
            android:layout_width="wrap_content"
            android:layout_height="322dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="20dp"
            android:scrollbars="vertical" />

        <EditText
            android:id="@+id/txtNivel"
            android:layout_width="337dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labelContenido"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="20dp"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/labelGrafico1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/labelContenido"
            android:layout_alignStart="@+id/btnBuscar"
            android:layout_marginStart="0dp"
            android:layout_marginTop="26dp"
            android:text="@string/ingrese_el_nivel_para_decifrar" />
    </RelativeLayout>
</ScrollView>