<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollview"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".GenerarLlavesRSA">

        <Button
            android:id="@+id/btnCifrar"
            style="@android:style/Widget.Button"
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="30dp"
            android:layout_marginTop="520dp"
            android:layout_marginEnd="256dp"
            android:layout_marginBottom="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/generar_llaves"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/labelGrafico1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="25dp"
            android:text="@string/ingrese_el_valor_de_p_para_generar_las_llaves" />

        <EditText
            android:id="@+id/txtClaveP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="55dp"
            android:layout_marginEnd="25dp"
            android:ems="10"
            android:inputType="number" />

        <TextView
            android:id="@+id/labelGrafico2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@+id/labelGrafico1"
            android:layout_alignParentTop="true"
            android:layout_marginTop="130dp"
            android:text="@string/ingrese_el_valor_de_q_para_generar_las_llaves" />

        <EditText
            android:id="@+id/txtClaveQ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="160dp"
            android:layout_marginEnd="25dp"
            android:ems="10"
            android:inputType="number" />
    </RelativeLayout>
</ScrollView>